; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_ghb_message_dialog.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_ghb_message_dialog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GTK_DIALOG_MODAL = common dso_local global i32 0, align 4
@GTK_BUTTONS_NONE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@GTK_RESPONSE_NO = common dso_local global i64 0, align 8
@GTK_RESPONSE_YES = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ghb_message_dialog(i32* %0, i32 %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* @GTK_DIALOG_MODAL, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* @GTK_BUTTONS_NONE, align 4
  %18 = load i32*, i32** %9, align 8
  %19 = call i32* @gtk_message_dialog_new(i32* %14, i32 %15, i32 %16, i32 %17, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32* %18)
  store i32* %19, i32** %12, align 8
  %20 = load i32*, i32** %12, align 8
  %21 = call i32 @GTK_DIALOG(i32* %20)
  %22 = load i32*, i32** %10, align 8
  %23 = load i64, i64* @GTK_RESPONSE_NO, align 8
  %24 = load i32*, i32** %11, align 8
  %25 = load i32, i32* @GTK_RESPONSE_YES, align 4
  %26 = call i32 @gtk_dialog_add_buttons(i32 %21, i32* %22, i64 %23, i32* %24, i32 %25, i32* null)
  %27 = load i32*, i32** %12, align 8
  %28 = call i32 @GTK_DIALOG(i32* %27)
  %29 = call i64 @gtk_dialog_run(i32 %28)
  store i64 %29, i64* %13, align 8
  %30 = load i32*, i32** %12, align 8
  %31 = call i32 @gtk_widget_destroy(i32* %30)
  %32 = load i64, i64* %13, align 8
  %33 = load i64, i64* @GTK_RESPONSE_NO, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %5
  %36 = load i32, i32* @FALSE, align 4
  store i32 %36, i32* %6, align 4
  br label %39

37:                                               ; preds = %5
  %38 = load i32, i32* @TRUE, align 4
  store i32 %38, i32* %6, align 4
  br label %39

39:                                               ; preds = %37, %35
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i32* @gtk_message_dialog_new(i32*, i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @gtk_dialog_add_buttons(i32, i32*, i64, i32*, i32, i32*) #1

declare dso_local i32 @GTK_DIALOG(i32*) #1

declare dso_local i64 @gtk_dialog_run(i32) #1

declare dso_local i32 @gtk_widget_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
